# analog-time-reader

./: .gitignore  README.md  annotations.dvc  datasets.dvc  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
annotations/keypoints/labelstudio/: .gitignore  kp_annotations.json.dvc
datasets/: original.dvc
scripts/: load_ls_env.sh
src/notebooks/: 01-annotation_formats_converter.ipynb  02-train_test_split.ipynb  03-evaluation.ipynb  03-inference.ipynb  04-inference.ipynb
src/watch_recognition/: evaluation.py  geometry_elements.py  inference.py  utils.py
src/watch_recognition/config/: config.py  config.yaml  data.yaml
src/watch_recognition/data_processing/: convert_kp_ls_yolo.py  generate_yolo_dataset.py
supplementary/label-studio/: labeling_interface.xml
