[project]
name = "watch-recognition"
version = "0.1.0"
description = "This project aims to read time from analog watches."
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "dvc>=3.62.0",
    "dvclive>=3.48.4",
    "ipykernel>=6.30.1",
    "label-studio>=1.20.0",
    "matplotlib>=3.10.5",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.179",
]
[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
